--- a/output/team.html
+++ b/output/team.html
@@ -24,42 +24,42 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Kennedy</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 3224</li>
-                            <li class="list-group-item">Email: <a href="mailto:myemail@gmail.com">myemail@gmail.com</a></li>
-                            <li class="list-group-item">Office number: undefined</li>
-                        </ul>
-                    </div>
+        <div class="card employee-card m-3">
+            <div class="card-header">
+                <h2 class="card-title">adadad</h2>
+                <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+            </div>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li class="list-group-item">ID: 1313</li>
+                    <li class="list-group-item">Email: <a href="mailto:daada">daada</a></li>
+                    <li class="list-group-item">Office number: 1313</li>
+                </ul>
+            </div>
+        </div>
+            <div class="card employee-card m-3">
+                <div class="card-header">
+                    <h2 class="card-title">adada</h2>
+                    <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
                 </div>
-                <div class="card employee-card">
+                <div class="card-body">
+                    <ul class="list-group">
+                        <li class="list-group-item">ID: 2424</li>
+                        <li class="list-group-item">Email: <a href="mailto:adadadad">adadadad</a></li>
+                        <li class="list-group-item">GitHub: <a href="https://github.com/adadad" target="_blank" rel="noopener noreferrer">adadad</a></li>
+                    </ul>
+                </div>
+            </div>
+                <div class="card employee-card m-3">
                     <div class="card-header">
-                        <h2 class="card-title">undefined</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Engineer</h3>
+                        <h2 class="card-title">sfsfsfsf</h2>
+                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Intern</h3>
                     </div>
                     <div class="card-body">
                         <ul class="list-group">
                             <li class="list-group-item">ID: 42424</li>
-                            <li class="list-group-item">Email: <a href="mailto:hisemail@email.com">hisemail@email.com</a></li>
-                            <li class="list-group-item">Office number: dadakd</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">undefined</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 2424</li>
-                            <li class="list-group-item">Email: <a href="mailto:hisemail@email.com">hisemail@email.com</a></li>
-                            <li class="list-group-item">Office number: undefined</li>
+                            <li class="list-group-item">Email: <a href="mailto:ssfsfsf">ssfsfsf</a></li>
+                            <li class="list-group-item">School: aadadad</li>
                         </ul>
                     </div>
                 </div>              
